# infera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ortcxx.cpp
cxx/bindings/c_sharp/: CMakeLists.txt  async_helper.cpp  async_helper.h  async_helper.i  ortcxx.i  test.cs
cxx/bindings/python/: CMakeLists.txt  main.cpp  test.py
cxx/core/: modelManager.cpp  serviceManager.cpp
cxx/include/: core.h  interface.h
scripts/: ins_pack.sh  run.sh  setup.sh
src/: ORTManager.cpp  ORTManager.h  ORTSession.cpp  ORTSession.h  ORTSessionInterface.h  main.cpp  runExample.cpp
